# item_selector

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  개발_에이전트_구성.md  검증결과.md  기획서.md
backend/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_hs_codes_name_text.py  0003_keyword_metrics_widen_growth.py  0004_metrics_avg_price.py  0005_score_details.py  0006_chinese_term.py  0007_product_shipping.py  0008_product_duty_rate.py  0009_customs_duty_rates.py  0010_product_sell_price.py  0011_product_ad_cost.py  0012_shipping_rates.py  0013_reset_categories.py  0014_seed_candidates.py  0015_detail_pages.py  0016_detail_page_template.py
backend/app/: deps.py  main.py
backend/app/cache/: __init__.py  api_cache.py
backend/app/clients/: __init__.py  base.py  coupang_partners.py  customs.py  exchange_rate.py  gemini.py  google_translate.py  google_trends.py  hs_code.py  naver_blogcafe.py  naver_datalab.py  naver_searchad.py  naver_shopping.py  youtube.py
backend/app/contracts/: __init__.py  dto.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  (+19 more)
backend/data/: HS_CODE_20260101.xlsx  LCL해운.xls  해운(자가).xls
backend/scripts/: import_customs_rates.py  import_hs_codes.py  import_shipping_rates.py  smoke_real_api.py
backend/templates/: README.md  detail_page_v1.html  detail_page_v1_sample_props.json  detail_page_v2_minimal.html  detail_page_v3_storytelling.html
backend/tests/: test_health.py
(+177 files in other folders)
