[project]
name = "itemselector-backend"
version = "0.0.1"
description = "itemSelector backend (infra skeleton)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.18",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "tenacity>=8.2.0",
    "redis>=5.0.0",
    "pytrends>=4.9.2",
    "apscheduler>=3.10.4",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "freezegun>=1.5.0",
    "fakeredis>=2.23.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/scripts/*",
    "app/db/session.py",
    "app/scheduler/main.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
